Remove unneeded equals